force-app/main/default/objects/sansancard__SSCard__c/sansancard__SSCard__c.object-meta.xml
<CustomObject>
    <label>SSCard</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>