force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__AdsCity__c.field-meta.xml
<CustomField>
    <fullName>sansancard__AdsCity__c</fullName>
    <label>City</label>
    <type>TextArea</type>
</CustomField>