force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__AdsState__c.field-meta.xml
<CustomField>
    <fullName>sansancard__AdsState__c</fullName>
    <label>State</label>
    <type>TextArea</type>
</CustomField>