force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>sansancard__MobilePhone__c</fullName>
    <label>MobilePhone</label>
    <type>Phone</type>
</CustomField>