force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__reserved1__c.field-meta.xml
<CustomField>
    <fullName>sansancard__reserved1__c</fullName>
    <label>reserved1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>